--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,75 @@
+html,
 body {
+	min-width: 1122px;
+	margin: 0;
+    padding: 0;
     font-size: 16px;
 	line-height: 23px;
     color: #000000;
     font-weight: normal;
     font-family: "Cuprum Italic", "Arial", sans-serif;
+}
+.clearfix::after {
+  content: "";
+
+  display: table;
+  clear: both;
+}
+.container {
+	width: 940px;
+	padding: 0 10px;
+    margin: 0 auto;
+}
+.header-main {
+	min-height: 320px;
+	margin-bottom: 58px;
+	background-color: #f1f5f7;
+}
+.main-content {
+	background-color: #ffffff;
+}
+.main-tabs {
+	width:942px;
+	min-height: 410px;
+	margin-bottom: 53px;
+}
+.main-h2 {
+    min-height: 89px;
+    margin-bottom: 20px;
+}
+.main-catalog__items {
+	min-height: 318px;
+	margin-bottom: 20px;
+}
+.main-manufactures {
+	min-height: 330px;
+}
+.main-services {
+	min-height: 520px;
+}
+.services__descr {
+	min-height: 180px;
+}
+.services__menu {
+	float: left;
+	width: 280px;
+	margin-right: 20px;
+
+}
+.services__items {
+	float: right;
+	min-width: 770px;
+}
+.main__left-block .main__about-company {
+	float:left;
+}
+.main__right-block {
+	float: right;
+}
+.main-footer {
+	background-color: #32425c;
+}
+.bottom-footer {
+	min-height: 107px;
+	background-color: #293449;
 }
