--- a/css/style.css
+++ b/css/style.css
@@ -20,49 +20,56 @@ body {
 	padding: 0 10px;
     margin: 0 auto;
 }
+/*css для index*/
 .header-main {
 	min-height: 320px;
-	margin-bottom: 58px;
-	background-color: #f1f5f7;
+	margin-bottom: 20px;
+	margin: 0;
+	padding: 0;
+	background-color: #f2f6f8;
 }.header-top {
+	min-height: 42px;
 	margin-bottom: 40px;
 	background-color: #293449;
 }
 .header-middle__summary {
 	float: left;
-	width: 300px;
+	width: 310px;
 	min-height: 100px;
-	padding-left: 50px;
-	margin-right: 10px;
+	margin-right: 10px; 
+	
 	margin-bottom: 20px;
 	background-color: #34495e; /*только для наглядности*/
 }
 .header-middle__contact {
 	float: left;
-	width: 293px;
+	width: 310px;
 	min-height: 100px;
-	margin-right: 45px;
+	margin-right: 10px;
 	margin-bottom: 20px;
 	background-color: #34495e; /*только для наглядности*/
 }
 .header-middle__making {
 	float: right;
-	width: 282px;
+	width: 320px;
 	min-height: 100px;
 	margin-bottom: 20px;
 	background-color: #34495e; /*только для наглядности*/
 }
 .main-navigation {
+	clear: both;
 	min-height: 60px;
 	margin-bottom: 60px;
 	background-color: #32425c;
 }
 .main-content {
+	margin-top: 20px;
 	background-color: #ffffff;
 }
 .main-tabs {
 	width:940px;
 	min-height: 410px;
+	margin-top: 20px;
 	margin-bottom: 50px;
 	font-size:0;
 	background-color: #c8a07c;/*только для наглядности*/
@@ -196,4 +203,79 @@ body {
 .bottom-footer {
 	min-height: 107px;
 	background-color: #293449;
+}
+.bottom-footer__informaition {
+	float: left;
+	width: 338px;
+	min-height: 95px;
+	margin-right: 20px;
+    background-color: #2d3bf6;/*только для наглядности*/
+
+}
+.informaition__share {
+	float: left;
+	width: 245px;
+	min-height: 95px;
+	margin-right: 15px; 
+	background-color: #2d3bf6;/*только для наглядности*/
+}
+.informaition__contact {
+	float: left;
+	width: 160px;
+	min-height: 95px;
+	margin-right: 2px; 
+	background-color: #2d3bf6;/*только для наглядности*/
+}
+.informaition__author {
+	float: right;
+	width: 160px;
+	min-height: 95px;
+	 
+	background-color: #2d3bf6;/*только для наглядности*/
+}
+/*css для inner*/
+.breadcrumbs {
+	min-height: 20px;
+	margin-bottom: 20px;
+	background-color: #2d3bf6;/*только для наглядности*/
+}
+.main-content h1 {
+	display: block;
+	min-height: 90px;
+	margin-bottom: 20px;
+	background-color: #f7f3ec;/*только для наглядности*/
+}
+.catalog-filter {
+	float: left;
+	width: 220px;
+	min-height: 1147px;
+	margin-right: 20px;
+	margin-bottom: 60px;
+	background-color: #2d3bf6;/*только для наглядности*/
+}
+.catalog-catalog-content {
+	float: right;
+	width: 700px;
+	min-height: 1147px;
+	margin-bottom: 60px;
+	background-color: #2d3bf6;/*только для наглядности*/
+}
+.catalog-sorting {
+    min-height: 40px;
+    margin-bottom: 20px;
+    background-color: #ee3643;/*только для наглядности*/
+}
+.catalog-list {
+	min-height: 995px;
+    margin-bottom: 52px;
+    background-color: #ee3643;/*только для наглядности*/
+}
+.main-content__paginator {
+	min-height: 40px;
+	background-color: #ee3643;/*только для наглядности*/
+}
+.catalog__little-about {
+	clear: both;
+	min-height: 260px;
+	background-color: #2d3bf6;/*только для наглядности*/
 }
